[gd_scene load_steps=25 format=1]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://cookie/textures/base.png" type="Texture" id=2]
[ext_resource path="res://main/countdown.gd" type="Script" id=3]
[ext_resource path="res://fonts/Action-Man/Action_Man.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://cookie/cookie.tscn" type="PackedScene" id=5]
[ext_resource path="res://misc/textures/stamp.png" type="Texture" id=6]
[ext_resource path="res://misc/textures/next_normal.png" type="Texture" id=7]
[ext_resource path="res://misc/textures/next_pressed.png" type="Texture" id=8]
[ext_resource path="res://main/sounds/main.ogg" type="AudioStream" id=9]
[ext_resource path="res://main/sounds/bad.wav" type="Sample" id=10]
[ext_resource path="res://main/sounds/next.wav" type="Sample" id=11]
[ext_resource path="res://main/sounds/perfect.wav" type="Sample" id=12]
[ext_resource path="res://main/sounds/stamp.wav" type="Sample" id=13]
[ext_resource path="res://main/sounds/success.wav" type="Sample" id=14]

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="Animation" id=4]

resource/name = "bonus"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 0.25, 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 42 ), Vector2( 100, 0 ), Vector2( 100, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=5]

font/size = 46
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]

font/size = 46
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="Animation" id=7]

length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cookie_base:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 2.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cookie_base:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("stamp:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1.5, 2.5 ),
"transitions": FloatArray( -4, 4, 1 ),
"update": 0,
"values": [ Vector2( 640, -260 ), Vector2( 640, 340 ), Vector2( 640, -260 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("workspace/cookie:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("se:play/play")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 1.5 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "stamp" ]
}

[sub_resource type="Animation" id=8]

length = 2.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("workspace/cookie:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1, 2.5, 2.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 256, -50 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("workspace/cookie:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1, 2.5, 2.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("workspace/cookie:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1, 2.5, 2.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("workspace/cookie:transform/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1, 2.5, 2.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("judge:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 1, 1.5, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=9]

font/size = 60
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="SampleLibrary" id=10]

samples/bad = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/next = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/perfect = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/stamp = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/success = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="cookie_base" type="TextureFrame" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 104.0
margin/right = 896.0
margin/bottom = 616.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="countdown" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 560.0
margin/top = 34.0
margin/right = 860.0
margin/bottom = 74.0
custom_constants/separation = 10
alignment = 0
script/script = ExtResource( 3 )

[node name="label" type="Label" parent="countdown"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 92.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "time"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="countdown"]

rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 102.0
margin/top = 0.0
margin/right = 202.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "60.5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bonas_time" type="Label" parent="countdown/value"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 42.0
margin/right = 144.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.111633, 0.921875, 0.371164, 1 )
text = "+20"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim" type="AnimationPlayer" parent="countdown/value/bonas_time"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bonus = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="success" type="HBoxContainer" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = 327.0
margin/right = 314.0
margin/bottom = 366.0
custom_constants/separation = 10
alignment = 0

[node name="value" type="Label" parent="success"]

rect/min_size = Vector2( 57, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 57.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label" type="Label" parent="success"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 67.0
margin/top = 0.0
margin/right = 195.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 6 )
text = "pieces"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="workspace" type="ColorFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 104.0
margin/right = 896.0
margin/bottom = 616.0
color = Color( 1, 1, 1, 0.0784314 )

[node name="cookie" parent="workspace" instance=ExtResource( 5 )]

[node name="interval" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="stamp" type="Sprite" parent="."]

transform/pos = Vector2( 640, -260 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/stamp = SubResource( 7 )
anims/submit = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="judge" type="Label" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 509.0
margin/top = 310.0
margin/right = 757.0
margin/bottom = 360.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "success!!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="submit" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 204.0
margin/right = 1229.0
margin/bottom = 624.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="bgm" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = true
stream/volume_db = -20.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="se" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 10 )
config/pitch_random = 0.0

[connection signal="time_bonus" from="." to="countdown" method="_on_main_time_bonus"]

[connection signal="time_changed" from="." to="countdown" method="_on_main_time_changed"]

[connection signal="cookie_shaved" from="workspace/cookie" to="." method="_on_cookie_cookie_shaved"]

[connection signal="timeout" from="interval" to="." method="_on_interval_timeout"]

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="button_down" from="submit" to="." method="_on_submit_button_down"]

[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]


